--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
-    "sweetalert2": "^11.15.0",
+    "react-toastify": "^10.0.6",
+    "sweetalert2": "^11.6.13",
     "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
